force-app/main/default/objects/RN_Telematics_Devices__c/RN_Telematics_Devices__c.object-meta.xml
<CustomObject>
    <label>RN Telematics Devices</label>
    <nameField>
        <label>RN Telematics Devices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RN Telematics Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>