force-app/main/default/objects/RN_Telematics_Devices__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RN Telematics Devices</relationshipLabel>
    <relationshipName>RN_Telematics_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>