force-app/main/default/objects/RN_Telematics_Devices__c/fields/Assoicated_HOS_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Assoicated_HOS_Device_Id__c</fullName>
    <label>Assoicated HOS Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>