force-app/main/default/objects/RN_Telematics_Devices__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>RN Telematics Devices</relationshipLabel>
    <relationshipName>RN_Telematics_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>