force-app/main/default/objects/RN_Telematics_Devices__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>Quote_Number__r.Opportunity__r.contract__r.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>