force-app/main/default/objects/RN_Telematics_Devices__c/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>