force-app/main/default/objects/RN_Telematics_Devices__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>