force-app/main/default/objects/RN_Telematics_Devices__c/fields/Defective__c.field-meta.xml
<CustomField>
    <fullName>Defective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defective</label>
    <type>Checkbox</type>
</CustomField>