force-app/main/default/objects/RN_Telematics_Devices__c/fields/Device_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Billing_Type__c</fullName>
    <label>Device Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Replaces Go4 Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>