force-app/main/default/objects/RN_Telematics_Devices__c/fields/Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Status__c</fullName>
    <label>Evaluation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>