force-app/main/default/objects/RN_Telematics_Devices__c/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <label>Installer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Install</fullName>
            </value>
            <value>
                <fullName>AMFS Install</fullName>
            </value>
            <value>
                <fullName>Handsfree Install</fullName>
            </value>
            <value>
                <fullName>RJA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>