force-app/main/default/objects/RN_Telematics_Devices__c/fields/Is_Eval__c.field-meta.xml
<CustomField>
    <fullName>Is_Eval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eval</label>
    <type>Checkbox</type>
</CustomField>