force-app/main/default/objects/RN_Telematics_Devices__c/fields/Is_Hos__c.field-meta.xml
<CustomField>
    <fullName>Is_Hos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hos</label>
    <type>Checkbox</type>
</CustomField>