force-app/main/default/objects/RN_Telematics_Devices__c/fields/IsRMAReplacment__c.field-meta.xml
<CustomField>
    <fullName>IsRMAReplacment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRMAReplacment</label>
    <type>Checkbox</type>
</CustomField>