force-app/main/default/objects/RN_Telematics_Devices__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>Quote_Number__r.Opportunity__r.Opportunity_Number__c</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>