force-app/main/default/objects/RN_Telematics_Devices__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Go4</fullName>
            </value>
            <value>
                <fullName>GO4GMTMOREP</fullName>
            </value>
            <value>
                <fullName>GO4GSMROG</fullName>
            </value>
            <value>
                <fullName>GO4GSMROGREP</fullName>
            </value>
            <value>
                <fullName>GO4GSMTMO</fullName>
            </value>
            <value>
                <fullName>Go5</fullName>
            </value>
            <value>
                <fullName>GO5TMO</fullName>
            </value>
            <value>
                <fullName>Go6</fullName>
            </value>
            <value>
                <fullName>GO63GATT</fullName>
            </value>
            <value>
                <fullName>GO63GROG</fullName>
            </value>
            <value>
                <fullName>GO63GTEL</fullName>
            </value>
            <value>
                <fullName>GO7-3GATT</fullName>
            </value>
            <value>
                <fullName>GO7-3GTMO</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>HOS + DVIR</fullName>
            </value>
            <value>
                <fullName>RN Telematics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>