force-app/main/default/objects/RN_Telematics_Devices__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Contract__r.Closed_Opportunity__r.Primary_Quote__r.Name</description>
    <formula>&apos;true&apos;</formula>
    <label>Quote</label>
    <type>Text</type>
</CustomField>