force-app/main/default/objects/RN_Telematics_Devices__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Quote # associated to the device</description>
    <label>Quote Number</label>
    <referenceTo>VCG_CPQ_Quote__c</referenceTo>
    <relationshipLabel>RN Telematics Devices</relationshipLabel>
    <relationshipName>RN_Telematics_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>