force-app/main/default/objects/RN_Telematics_Devices__c/listViews/All_Devices.listView-meta.xml
<ListView>
    <fullName>All_Devices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>Contract_Number__c</columns>
    <columns>Installation_Date__c</columns>
    <columns>Installer__c</columns>
    <columns>Comments__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Devices</label>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>